--- a/01.Estroctura.html
+++ b/01.Estroctura.html
@@ -126,11 +126,11 @@
     </header>
     <nav>Esta es la barra de navegacion(menu)</nav>
     <section>Seccion principal</section>
-    <aside>
+    <aside><!--Sirve para identificar columna-->
         <div class="noticias">Noticia 1</div><!--Si queremos dar el mismo estilo a todas estas noticias podemos usar clases y estas se llaman en cada div-->
         <div class="notocias">Noticia 2</div>
         <div class="noticias">Noticia 3</div>
-   </aside><!--Sirve para identificar columna-->
+   </aside>
     <article>Articulo</article><!--sirve para escribir articulos-->
     <h1>Titulo</h1>
     <h2>Titulo</h2>
