--- a/05propiedad de ubicacion.html
+++ b/05propiedad de ubicacion.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Propiedades de ubicacion</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet"> <!--Nos permite usar tipografias de google-->
+
 
     <style>
         /* IMPORTANTE: primeramente se debe formatear el estilo de la pagina, es decir caambiar los balores que trae por defecto una pagina al crearse */
@@ -12,6 +15,7 @@
             margin: 0;
             padding: 0;
             list-style: none;
+            font-family: sans-serif;
         }
 
         /* Empezamos a maqueterar la pagina */
@@ -27,7 +31,7 @@
             margin: 20px auto; 
             width: 1000px;
             height: 120px;
-            background: black;
+            /* background: black; */
         }
 
         #logo{
@@ -40,6 +44,11 @@
             width: 200px;
             height: 66px;
             background: wheat;
+
+            font-family: 'Kaushan Script', cursive; /*Una vez ya con la etiqueta de google fonts podemos utiliazar la tipografia que querramos en ente caso "Kaushan Script"*/ 
+            font-size: 50px;
+            text-align: center;
+            line-height: 66px; /*Tienen que ser del mismo taño del height*/
         }        
         
         .redsocial{
@@ -47,23 +56,29 @@
             position: absolute;
             width: 42px;
             height: 42px;
-            background: white;
+            background: #ccc;
             border-radius: 100%;
+            text-align: center;
+            line-height: 42px;
+            color: white;
           }
         #red1{
             /* Definiendo posision */
             top: 42px;
             right: 120px;
+            background: blue;
         }
         #red2{
             /* Definiendo posision */
             top: 42px;
             right: 73px;
+            background: green;
         }
         #red3{
             /* Definiendo posision */
             top: 42px;
             right: 19px;
+            background: red;
         }
 
         nav{
@@ -77,9 +92,12 @@
             float: left;/*hace que los elemento floten de manera horizontal*/
             width: 196px;
             height: 48px;
-            background: red;
+            background:rgba(100, 6, 255, 1);
             margin: 0px 2px;
-
+            font-family: 'Kaushan Script', cursive;
+            color: white;
+            text-align: center;
+            line-height: 48px;
         }
 
         #superior{
@@ -102,8 +120,22 @@
             float:left;
             width: 326px;
             height: 192px;
-            background: black;
+            background: #999;
             margin-right: 10px;
+            text-align: center;            
+        }
+
+        /* maquetamos las imagenes de esa rura  */
+        #superior ul li img{
+            border-radius: 100%;
+            height: 100px;
+        }
+        #superior ul li h1{
+            font-family: 'Kaushan Script', cursive;
+        }
+        #superior ul li h1 p{
+            font-size: 14px;
+            margin: 10px;
         }
 
         section{
@@ -111,8 +143,9 @@
             margin: 20px auto; 
             width: 1000px;
             height: 453px;
-            background: yellowgreen;
+            /* background: yellowgreen; */
         }
+
         /* Lo siguiente NO ES una ruta sino hace referencia aun aside especifico */
         aside#izq{
             position: absolute;
@@ -137,57 +170,93 @@
             left: 200px;
             width: 600px;
             height: 453px;
-            background: blue;
+            /* background: blue; */
         }
+        article h1{
+            font-family: 'Kaushan Script', cursive;
+            font-size: 40px;
+            margin: 20px;
+        }
+        article p img{
+            float: left;
+            margin-right: 20px;
+        }
+        article p{
+            margin: 5px 20px;
+            font-size: 14px;
+            text-align: justify;
+        }
+
+        
         footer{
             position: relative;
             margin: 20px auto; 
             width: 1000px;
             height: 70px;
-            background: gray;
+            background:rgba(100, 6, 255, 1);
+            text-align: center;
+            line-height: 70px;
+            color: white;
         }
     </style>
 </head>
 <body>
     <!-- Cabezote -->
     <header>
-        <div id="logo">Logo</div>
+        <div id="logo">Logotipo</div>
 
-        <div id="red1" class="redsocial">redes1</div>        
-        <div id="red2" class="redsocial">redes2</div>
-        <div id="red3" class="redsocial">redes3</div>
+        <div id="red1" class="redsocial">red1</div>        
+        <div id="red2" class="redsocial">red2</div>
+        <div id="red3" class="redsocial">red3</div>
     </header>
 
     <!-- Navegacion -->
     <nav>
         <ul>
-            <li id="" class="botones">nav1</li>        
-            <li id="" class="botones">nav2</li>
-            <li id="" class="botones">nav3</li>        
-            <li id="" class="botones">nav4</li>
-            <li id="" class="botones">nav5</li>        
+            <li id="" class="botones">boton1</li>        
+            <li id="" class="botones">boton2</li>
+            <li id="" class="botones">boton3</li>        
+            <li id="" class="botones">boton4</li>
+            <li id="" class="botones">boton5</li>        
         </ul>   
     </nav>
 
     <!-- Partesuperior -->
     <div id="superior">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <img src="./img/eyes11.jpg" width="100">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li>
+                <img src="./img/eyes11_B.jpg" width="100">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li>
+                <img src="./img/eyes11_C.png" width="100" >
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
         </ul>
     </div>
 
     <!-- Inicio de seccion principal  -->
     <section>
         <aside id="izq"></aside>
-        <article></article>
+        <article>
+            <h1>Lorem Ipsum</h1>
+            <p><img src="./img/clare.jpg" height="250">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dicta quaerat praesentium deleniti porro accusantium debitis ratione? Est a doloremque cupiditate architecto quibusdam perferendis dolor, culpa ut quasi quia labore.</p>
+            <br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus ipsam maxime sit numquam officia culpa rerum sunt accusantium exercitationem molestiae, voluptatem adipisci aspernatur, voluptates deserunt similique maiores nesciunt placeat ea! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum veritatis quia voluptas, quod iusto inventore illo blanditiis placeat necessitatibus, obcaecati dolore tempora suscipit exercitationem quam in maxime atque est magni.</p>
+        </article>
         <aside id="der"></aside>
     </section>
 
     <!-- Pie de pagina  -->
     <footer>
-
+        &copy; Todos lo redercos reservados
     </footer>
 
 </body>
