--- a/05propiedad de ubicacion.html
+++ b/05propiedad de ubicacion.html
@@ -153,7 +153,16 @@
             top: 0;
             width: 200px;
             height: 453px;
-            background: #333;
+            /* background: #333; */
+        }
+        aside#izq ul li{
+            background: #aaa;
+            padding: 10px;
+            margin: 2px 10px;
+            list-style: square;
+            list-style-position: inside;
+            list-style-image: url(./img/chincheta.png);
+            
         }
 
         aside#der{
@@ -244,7 +253,14 @@
 
     <!-- Inicio de seccion principal  -->
     <section>
-        <aside id="izq"></aside>
+        <aside id="izq">
+            <ul>
+                <li>link1</li>
+                <li>link2</li>
+                <li>link4</li>
+                <li>link5</li>
+            </ul>
+        </aside>
         <article>
             <h1>Lorem Ipsum</h1>
             <p><img src="./img/clare.jpg" height="250">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dicta quaerat praesentium deleniti porro accusantium debitis ratione? Est a doloremque cupiditate architecto quibusdam perferendis dolor, culpa ut quasi quia labore.</p>
